// Synapse gRPC/Tonic service generation options
//
// These options control how protobuf services are converted to Tonic gRPC
// service implementations. The generated code wraps storage traits and handles
// request validation, error conversion, and response mapping.

syntax = "proto3";

package synapse.grpc;

import "google/protobuf/descriptor.proto";

// Service-level gRPC generation options
message ServiceOptions {
  // Skip generation for this service (generates by default)
  bool skip = 1;

  // Override the generated struct name (default: {ServiceName}GrpcService)
  string struct_name = 2;

  // Storage trait to use (default: {ServiceName}Storage)
  // The generated gRPC service will be generic over this trait
  string storage_trait = 3;
}

// Method-level gRPC generation options
message MethodOptions {
  // Skip generation for this method
  bool skip = 1;

  // Override the method name in the generated impl
  string method_name = 2;

  // Domain type to use for the input (from synapse.validate)
  // If specified, the gRPC handler will validate and convert the request
  // to this domain type before calling the storage trait
  string input_type = 3;
}

// Response message options for gRPC
message ResponseOptions {
  // Enable rich error responses for mutations
  // When true, validation errors are returned in the response's `errors` field
  // instead of as gRPC status errors
  bool rich_errors = 1;
}

extend google.protobuf.ServiceOptions {
  // gRPC service generation options
  ServiceOptions service = 52001;
}

extend google.protobuf.MethodOptions {
  // gRPC method generation options
  MethodOptions method = 52002;
}

extend google.protobuf.MessageOptions {
  // gRPC response generation options
  ResponseOptions response = 52003;
}
